fixing responsive alignments

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,6 @@
 .c-main-content{
     display: flex;
     flex-wrap: wrap;
-    padding-top: 64px;
-    padding-bottom: 64px;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
