--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -49,4 +49,16 @@
             background: rgba(41,226,174,1);
         }
     }
+
+    @media(max-width: 768px){
+        margin-bottom: 32px;
+        flex-wrap: wrap;
+
+        button, input{
+            width: 100%;
+            border-radius: 6px;
+            height: 50px;
+            margin-bottom: 10px;
+        }
+    }
 }
